# position_compare_tfg

position_compare/: CMakeLists.txt  package.xml
position_compare/launch/: position_compare.launch
position_compare/src/: position_compare_V_poseStamped.cpp  position_compare_V_vicon.cpp
